@@ -2540,4 +2540,6 @@
 	  Starter Kit port.  Added and verified the NuttShell (NSH) on the PIC32
 	  Ethernet Starter Kit.  I can now (finally) claim to have complete the
 	  basic port to this board.
+	* configs/pic32-startkit/nsh/up_usbdev, up_nsh.c, and up_usbterm.c:  Verified
+	  the USB (device) driver on the PIC32 Ethernet Starter Kit.
 
